@@ -3,10 +3,14 @@ typedef struct
 
   char username[121];
   char ipaddress[46];
-  int tcp_port, udp_port;
   char channel[121];
+  char os[121], release[121], os_version[121];
+  int tcp_port, udp_port;
   bool_t bUDP, authenticated, deaf, mute, self_deaf, self_mute, recording, bOpus;
+	int availableBandwidth;
   uint32_t online_secs, idle_secs;
+  bool_t isAdmin;
+  bool_t isSuppressed;
   float UDPPingAvg, UDPPingVar, TCPPingAvg, TCPPingVar;
   uint32_t UDPPackets, TCPPackets;
 
