@@ -1,3 +1,7 @@
+* Added more client data 99% of the useful client data shown
+* removed memcpys  (requested by fatbob)
+
+
 * Using a more modern unix sharedmemory API. this requires linking with librt.so  (requested by fatbob)
 * Added away to know if umurmurd is not connected/updateing the shm_t struct. I use 8bit timer with 
   rollover protection see check_serverTick() and where I use the function near bottum of mon-umurmurd.c 
